# NumericalProjectsCollections

./: README.md
Deformation/NeoHookeanFlesh/snh_code/cubesim/: CGInterface.cpp  CMakeLists.txt  CubeMesh.cpp  CubeNewtonSolver.h  EigenCG.h  InitialMesh.h  LineSearches.h  LocalHessianLocation.h  Material.h  QuasistaticSolveResult.cpp  QuasistaticSolveResult.h  Settings.h  TetMesh.h  TetNewtonSolver.h
Deformation/sharpKelvinlets/code/exampleDyna/: CMakeLists.txt  main.cpp
SkinSkeletonBone/NeoHookeanFlesh/snh_code/: CMakeLists.txt  README.md  download_eigen.sh
SkinSkeletonBone/NeoHookeanFlesh/snh_code/cmake/: FindEigen3.cmake
SkinSkeletonBone/NeoHookeanFlesh/snh_code/cubesim/: CGInterface.h  CGSolverType.h  Cube.cpp  Cube.h  CubeMesh.h  CubeNewtonSolver.cpp  EigenCG.cpp  Material.cpp  StableNeoHookean.h  TetMesh.cpp
SkinSkeletonBone/NeoHookeanFlesh/snh_code/hexcli/: CMakeLists.txt  hexcli.cpp
SkinSkeletonBone/NeoHookeanFlesh/snh_code/tetcli/: CMakeLists.txt
WaterFlowFluid/eigenFluid/: CMakeLists.txt  DCT.py  MIC.py  compile.sh  fluid2D.cfg  fluid3D.perl  fluid3D_DCT.perl  fluid3D_stam3D.perl  fluid_two_phase_pulse.cfg  note.md  precompute_2Dtensor.pl  run_fluid2D.perl  run_stam.perl  stam.flags
WaterFlowFluid/eigenFluid/SourceCodes/: README.md  fluid_3D_paddle.cfg  fluid_moving_sphere.cfg  precompute_3Dtensor.pl
WaterFlowFluid/eigenFluid/SourceCodes/applications/: CMakeLists.txt  fluidStam3D.cpp  fluid_DCT_sim3D.cpp  laplacian_fluid_sim3D.cpp
WaterFlowFluid/eigenFluid/SourceCodes/density_source/: six_plume_source_pos.txt
WaterFlowFluid/eigenFluid/SourceCodes/libraries/stlplus3/: CMakeLists.txt
WaterFlowFluid/eigenFluid/SourceCodes/obstacles/: boundary_paddle_master.txt  box1.txt  box2.txt  cylinde_direct.txt  cylinde_direct_pos.txt  cylinde_paddle.txt  cylinder_small_list.txt  cylinder_static1.txt  cylinder_static2.txt  cylinder_static3.txt  cylinder_static4.txt  cylinder_static5.txt  cylinder_static6.txt  cylinder_static_horizontal.txt  obstacle_list_six_cylinder.txt  obstacle_paddle.txt  small_sphere1.txt  small_sphere4.txt
WaterFlowFluid/eigenFluid/SourceCodes/obstacles/cylinder_interact/: cylinder_interact_list.txt
WaterFlowFluid/eigenFluid/SourceCodes/obstacles/cylinder_small/: cylinder_small1.txt  cylinder_small10.txt  cylinder_small12.txt  cylinder_small3.txt  cylinder_small4.txt  cylinder_small5.txt  cylinder_small7.txt  cylinder_small7_1.txt  cylinder_small8.txt
WaterFlowFluid/eigenFluid/SourceCodes/scripts/: Anacomp.nb  CompTOneNeumann.m  CompVariationalDirichlet.m  CompVariationalOneNeumann.m  ComputeTransferMatrix.m  E_visc0.0002.txt  FourierNeumannSkewSymm.py  Output3DParaview.m  PlotErrorTest.m  Untitled-1.nb  cp_decomp_tensor.m  hist_T2_1010.txt  hist_T2_3577.txt  hist_T6_2691.txt  plot_Dedalus_energy.py  plot_basis_weight.py  plot_energy.py  plot_energy_visc.py  plot_historgram.py
WaterFlowFluid/eigenFluid/SourceCodes/src/: CMakeLists.txt
WaterFlowFluid/eigenFluid/SourceCodes/src/2D/: FIELD2D.h  FLUID2D.h  VFIELD2D.cpp  VFIELD2D.h  all_dirichlet_basis_2D.h  all_dirichlet_basis_2D_test.cpp  drawer_2d.h  laplacian_basis_2D.cpp  laplacian_basis_2D.h  laplacian_fluid_2D.cpp  obstacle_2d.cpp  obstacle_2d_test.cpp  particle_2d.h  three_dirichlet_one_neumann.cpp  three_dirichlet_one_neumann.h  two_neumann_basis_2D.cpp  two_neumann_x_2D.cpp  two_neumann_x_2D.h
WaterFlowFluid/eigenFluid/SourceCodes/ted_cfgs/: fluid_DCT.cfg  stam.64.cfg
WaterFlowFluid/eigenFluid/applications/: drop_tensor_entries.cpp  laplacian_fluid_sim2D.cpp  precompute_2D_tensor.cpp  precompute_3D_tensor.cpp
WaterFlowFluid/eigenFluid/density_source/: jetcollide.txt  single_phase_source.txt
WaterFlowFluid/eigenFluid/libraries/: CMakeLists.txt
WaterFlowFluid/eigenFluid/obstacles/: cylinder_middle_big.txt  cylinder_static.txt  moving_sphere.txt  multiple_plumes.txt  obstacle_master.txt  obstacle_master_movingsphere.txt  single_cylinder_comparison.txt  small_sphere2.txt  small_sphere3.txt  small_sphere5.txt  small_sphere6.txt  sphere.txt  sphere_center.txt
WaterFlowFluid/eigenFluid/obstacles/cylinder_interact/: cylinder_interact.txt
WaterFlowFluid/eigenFluid/obstacles/cylinder_small/: cylinder_small11.txt  cylinder_small2.txt  cylinder_small6.txt  cylinder_small9.txt
WaterFlowFluid/eigenFluid/scripts/: ComputeError.m  ComputeTensorEntry.m  ComputeTwoNeumannTensor.m  ComputeTwoNeumannTensorEntry.m  Dirichlet3Dparaview.m  E_visc0.0001.txt  E_visc0.txt  FourierNeumannDiffOnly.py  FourierNeumannRotation.py  Lookup.m  TensorEntVarDirich.m  TwoNeumann.nb  hist_T2_8162.txt  hist_T4_3360.txt  plot_compressed_l2_error.py  plot_eigenValues.py  plot_graph.m
WaterFlowFluid/eigenFluid/src/: setting.h
WaterFlowFluid/eigenFluid/src/2D/: FIELD2D.cpp  FLUID2D.cpp  all_dirichlet_basis_2D.cpp  basis_lookup_2D.cpp  basis_lookup_2D.h  drawer_2d.cpp  laplacian_fluid_2D.h  obstacle_2d.h  three_dirichlet_one_neumann_test.cpp  two_neumann_basis_2D.h  two_neumann_x_2D_test.cpp
WaterFlowFluid/eigenFluid/src/3D/: FIELD_3D.h  Ted_obstacle.h  VECTOR3_FIELD_3D.cpp  density_warpper.cpp  dirichlet_basis_3d.cpp  dirichlet_basis_3d.h  drawer_3d.h  fluid_3D_DCT.cpp  fluid_3D_DCT.h  four_neumann_basis_set_3d.h  laplacian_basis_3d.h  obstacle_3d.h  obstacle_cylinder_3d.cpp  obstacle_cylinder_interact.h  obstacle_wrapper_3d.cpp  one_neumann_basis_3d.cpp  one_neumann_basis_3d.h  particle_3d.cpp  particle_3d.h  six_neumann_basis_3d.cpp  six_neumann_basis_3d.h  six_neumann_basis_set_3d.h  trig_integral_3d.cpp  trig_integral_3d.h  trig_integral_3d_test.cpp  two_neumann_x_3d_basis.h  two_neumann_x_3d_basis_set_test.cpp
WaterFlowFluid/eigenFluid/src/Alg/: MATRIX3.h  VEC2.h  VECTOR.cpp  VECTOR.h
WaterFlowFluid/eigenFluid/src/solver/: integrator_2d.cpp  integrator_2d.h  integrator_semi_implicit.h  trapezoidal.h
WaterFlowFluid/eigenFluid/src/util/: QUICKTIME_MOVIE.h  SIMPLE_PARSER.cpp  block_3d_dct.cpp  block_3d_dct.h  get_current_time.h  glPrintString.h  read_write_tensor.h  solve_quadratic.cpp  stringprintf.cc  timer.h  util.h
WaterFlowFluid/eigenFluid/ted_cfgs/: paddle.cfg  small_cylinders.cfg
(+4990 files in other folders)
